--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Page Navbar -->
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="logo" href="#">SAID<span class="note">Important</span></a>         
+            <a class="logo" href="#" class="note">SAID</a>         
             <ul class="nav">
                 <li class="item">
                     <a class="link" href="#home">Home</a>
@@ -56,7 +56,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am SAID WILDER</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
+            <p class="header-subtitle">DATA ENGINEER APPRENTICESHIP</p>            
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>              
