--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Page Navbar -->
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="logo" href="#" class="note">SAID</a>         
+            <!-- a class="logo" href="#" class="note">SAID</a -->         
             <ul class="nav">
                 <li class="item">
                     <a class="link" href="#home">Home</a>
@@ -42,7 +42,7 @@
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
                 <div class="hamburger-box">
-                  <div class="hamburger-inner"></div>
+                  <!-- div class="hamburger-inner"></div -->
                 </div>
             </a>
         </div>          
