--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </h1>
             <p class="header-subtitle">DATA ENGINEER APPRENTICESHIP</p>            
 
-            <button class="btn btn-primary">Visit My Works</button>
+            <!--button class="btn btn-primary">Visit My Works</button--->
         </div>              
     </header><!-- end of page header -->
 
